--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,6 +10,7 @@
         android:name="com.andrewkingmarshall.navigationcomponentsexample.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main">
+
         <action
             android:id="@+id/action_mainFragment_to_chooseRecipientFragment"
             app:destination="@id/chooseRecipientFragment"
@@ -18,6 +19,7 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             app:popUpToInclusive="false" />
+
         <action
             android:id="@+id/action_mainFragment_to_viewTransactionFragment"
             app:destination="@id/viewTransactionFragment"
@@ -25,6 +27,7 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+
         <action
             android:id="@+id/action_mainFragment_to_viewBalanceFragment"
             app:destination="@id/viewBalanceFragment"
@@ -32,12 +35,15 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+
     </fragment>
+
     <fragment
         android:id="@+id/chooseRecipientFragment"
         android:name="com.andrewkingmarshall.navigationcomponentsexample.ChooseRecipientFragment"
         android:label="fragment_choose_recipient"
         tools:layout="@layout/fragment_choose_recipient">
+
         <action
             android:id="@+id/action_chooseRecipientFragment_to_specifyAmountFragment"
             app:destination="@id/specifyAmountFragment"
@@ -45,12 +51,15 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+
     </fragment>
+
     <fragment
         android:id="@+id/confirmationFragment"
         android:name="com.andrewkingmarshall.navigationcomponentsexample.ConfirmationFragment"
         android:label="fragment_confirmation"
         tools:layout="@layout/fragment_confirmation">
+
         <action
             android:id="@+id/action_confirmationFragment_to_chooseRecipientFragment"
             app:destination="@id/chooseRecipientFragment"
@@ -59,12 +68,23 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             app:popUpTo="@id/mainFragment" />
+
+        <argument
+            android:name="recipient"
+            app:argType="string" />
+
+        <argument
+            android:name="amount"
+            app:argType="com.andrewkingmarshall.navigationcomponentsexample.Money" />
+
     </fragment>
+
     <fragment
         android:id="@+id/specifyAmountFragment"
         android:name="com.andrewkingmarshall.navigationcomponentsexample.SpecifyAmountFragment"
         android:label="fragment_specify_amount"
         tools:layout="@layout/fragment_specify_amount">
+
         <action
             android:id="@+id/action_specifyAmountFragment_to_confirmationFragment"
             app:destination="@id/confirmationFragment"
@@ -73,12 +93,19 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
             app:popUpTo="@id/mainFragment" />
+
+        <argument
+            android:name="recipient"
+            app:argType="string" />
+
     </fragment>
+
     <fragment
         android:id="@+id/viewBalanceFragment"
         android:name="com.andrewkingmarshall.navigationcomponentsexample.ViewBalanceFragment"
         android:label="fragment_view_balance"
         tools:layout="@layout/fragment_view_balance" />
+
     <fragment
         android:id="@+id/viewTransactionFragment"
         android:name="com.andrewkingmarshall.navigationcomponentsexample.ViewTransactionFragment"
